--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "seed": "node utils/seed.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "mongoose": "^6.0.13"
   },
